# physics

./: Cargo.toml  LICENSE  README.md  build.rs
res/: bunny.mtl
src/: camera.rs  graphics.rs  lib.rs  main.rs  model.rs  physics.rs  rendering.rs  resources.rs  shader.wgsl
src/physics/: constraint_solving.rs  constraints.rs  fluid.rs  pbd.rs  rigid_body.rs  sle_solver.rs  sparse_matrix.rs
src/physics/constraints/: fixed_orientation_constraint.rs  fixed_position_constraint.rs
src/rendering/: camera.rs  model.rs  texture.rs
