[package]
name = "physics_engine"
version = "0.1.0"
edition = "2021"

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
env_logger = "0.9"
log = "0.4"
wgpu = "0.15"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
nalgebra = "0.32.2"
tobj = { version = "3.2.1", features = ["async",]}
imgui-wgpu = "0.22.0"
imgui = "0.10.0"
imgui-winit-support = "0.10.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
